[project]
name = "ShowStopper"
version = "0.0.1"
description = "Stop-watch geared towards tracking need for the performing arts"
authors = [{ name = "Quaternion Media, LLC", email = "harpo@quaternion.media" }]
dependencies = ["textual>=0.86.3"]
requires-python = "~=3.9"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = ["textual-dev>=1.7.0"]

[tool.pdm.scripts]
start = "textual run stopwatch.py"
serve = "textual serve --dev stopwatch.py"
